Agregue el Activity splash screen de Bienvenidad, Modifique gradle: de guia y posicion de los elmentos en la vista previa

--- a/Lab1-UI/src/main/res/layout/activity_main.xml
+++ b/Lab1-UI/src/main/res/layout/activity_main.xml
@@ -31,8 +31,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:background="@color/colorPrimaryDark"
-        android:onClick="onclick"
+        android:textColor="#ffff"
+        android:textSize="16sp"
+        android:textStyle="bold"
         android:text="@string/sbtnServicios" />
-
 
 </RelativeLayout>
