--- a/Lab1-UI/src/main/res/layout-land/activity_bebidas.xml
+++ b/Lab1-UI/src/main/res/layout-land/activity_bebidas.xml
@@ -18,26 +18,25 @@
 
     <EditText
         android:id="@+id/ediNombre"
-        android:layout_width="match_parent"
+        android:layout_width="346dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="@string/stxtNombre" />
 
     <EditText
         android:id="@+id/ediPrecio"
-        android:layout_width="183dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="350dp"
+        android:layout_marginTop="-50dp"
         android:ems="10"
         android:hint="@string/sPrecio"
         android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/ediIngredientes"
-        android:layout_width="match_parent"
+        android:layout_width="349dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="@string/sIngredientes" />
 
@@ -46,60 +45,67 @@
         android:layout_width="108dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_marginLeft="350dp"
+        android:layout_marginTop="-50dp"
         android:background="@color/colorPrimaryDark"
         android:onClick="onClick"
         android:text="@string/sRegistrar"
         android:textColor="#ffff" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="175dp">
 
         <TextView
             android:id="@+id/labenombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="-68dp"
+            android:layout_toStartOf="@+id/txtprecio"
             android:text="@string/stxtNombre" />
 
         <TextView
             android:id="@+id/txtnombre"
-            android:layout_width="match_parent"
+            android:layout_width="458dp"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="-20dp" />
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/labeingredientes" />
 
         <TextView
             android:id="@+id/txtprecio"
-            android:layout_width="match_parent"
+            android:layout_width="194dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="10dp" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="68dp"
+            android:layout_marginTop="29dp" />
 
         <TextView
             android:id="@+id/labeprecio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-20dp"
+            android:layout_alignStart="@+id/labenombre"
+            android:layout_alignTop="@+id/txtprecio"
             android:paddingTop="0dp"
             android:text="@string/sPrecio" />
-
-        <TextView
-            android:id="@+id/txtIngredientes"
-            android:layout_width="344dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="80dp"
-            android:layout_marginTop="10dp" />
 
         <TextView
             android:id="@+id/labeingredientes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-20dp"
+            android:layout_above="@+id/txtIngredientes"
+            android:layout_alignStart="@+id/labenombre"
             android:text="@string/sIngredientes" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/txtIngredientes"
+            android:layout_width="243dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="113dp" />
+
+    </RelativeLayout>
 
 </LinearLayout>
