--- a/Lab1-UI/src/main/res/layout-land/activity_servicio.xml
+++ b/Lab1-UI/src/main/res/layout-land/activity_servicio.xml
@@ -11,9 +11,10 @@
         android:id="@+id/imgComidaC"
         android:layout_width="196dp"
         android:layout_height="183dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="56dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="53dp"
         android:layout_marginRight="20dp"
         android:onClick="onClick"
         android:src="@drawable/plato"
@@ -24,9 +25,10 @@
         android:id="@+id/imgBebidaC"
         android:layout_width="206dp"
         android:layout_height="186dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="66dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="80dp"
+        android:layout_marginTop="42dp"
         android:onClick="onClick"
         android:src="@drawable/drink"
         app:civ_fill_color="@color/colorPrimaryDark"
