--- a/Lab1-UI/src/main/res/values/colors.xml
+++ b/Lab1-UI/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#e4111f</color>
     <color name="colorPrimaryDark">#890406</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ff4081</color>
 
 </resources>
