--- a/Lab1-UI/src/main/res/layout/activity_main.xml
+++ b/Lab1-UI/src/main/res/layout/activity_main.xml
@@ -31,9 +31,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:background="@color/colorPrimaryDark"
+        android:text="www.restaurant"
         android:textColor="#ffff"
         android:textSize="16sp"
-        android:textStyle="bold"
-        android:text="@string/sbtnServicios" />
+        android:textStyle="bold" />
 
 </RelativeLayout>
