--- a/Lab1-UI/src/main/res/layout/activity_comida.xml
+++ b/Lab1-UI/src/main/res/layout/activity_comida.xml
@@ -125,19 +125,7 @@
             android:ems="10"
             android:hint="@string/sIngredientes" />
 
-        <Button
-            android:id="@+id/btnRegistrar2"
-            android:layout_width="122dp"
-            android:layout_height="48dp"
-
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="116dp"
-            android:background="@color/colorPrimaryDark"
-            android:text="@string/sRegistrar"
-            android:textColor="#ffff" />
-
-        <Button
+    <Button
             android:id="@+id/btHora"
             android:layout_width="62dp"
             android:layout_height="37dp"
@@ -174,6 +162,116 @@
         android:layout_height="wrap_content"
         android:text="TextView" />
 
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="179dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
+
+        <Button
+            android:id="@+id/btnRegistrar2"
+            android:layout_width="122dp"
+            android:layout_height="48dp"
+
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:background="@color/colorPrimaryDark"
+            android:text="@string/sRegistrar"
+            android:textColor="#ffff"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp" />
+
+        <TextView
+            android:id="@+id/txtmnombre"
+            android:layout_width="91dp"
+            android:layout_height="18dp"
+            android:text="NOMBRE"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="48dp" />
+
+        <TextView
+            android:id="@+id/txtmhora"
+            android:layout_width="93dp"
+            android:layout_height="19dp"
+            android:text="HORA"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="67dp" />
+
+        <TextView
+            android:id="@+id/txtmtipo"
+            android:layout_width="93dp"
+            android:layout_height="18dp"
+            android:text="TIPO"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="86dp" />
+
+        <TextView
+            android:id="@+id/txtmtiempo"
+            android:layout_width="94dp"
+            android:layout_height="19dp"
+            android:text="TIEMPO"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="105dp" />
+
+        <TextView
+            android:id="@+id/txtmprecio"
+            android:layout_width="95dp"
+            android:layout_height="19dp"
+            android:text="PRECIO"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="124dp" />
+
+        <TextView
+            android:id="@+id/txtIngredientesc"
+            android:layout_width="268dp"
+            android:layout_height="0dp"
+            tools:layout_editor_absoluteX="109dp"
+            tools:layout_editor_absoluteY="143dp" />
+
+        <TextView
+            android:id="@+id/txtPrecioc"
+            android:layout_width="89dp"
+            android:layout_height="20dp"
+            tools:layout_editor_absoluteX="109dp"
+            tools:layout_editor_absoluteY="124dp" />
+
+        <TextView
+            android:id="@+id/txtTiempo"
+            android:layout_width="89dp"
+            android:layout_height="20dp"
+            tools:layout_editor_absoluteX="109dp"
+            tools:layout_editor_absoluteY="104dp" />
+
+        <TextView
+            android:id="@+id/txtTipoc"
+            android:layout_width="89dp"
+            android:layout_height="20dp"
+            tools:layout_editor_absoluteX="109dp"
+            tools:layout_editor_absoluteY="86dp" />
+
+        <TextView
+            android:id="@+id/txtHorac"
+            android:layout_width="89dp"
+            android:layout_height="20dp"
+            tools:layout_editor_absoluteX="109dp"
+            tools:layout_editor_absoluteY="67dp" />
+
+        <TextView
+            android:id="@+id/txtNombrec"
+            android:layout_width="219dp"
+            android:layout_height="20dp"
+            tools:layout_editor_absoluteX="109dp"
+            tools:layout_editor_absoluteY="48dp" />
+
+        <TextView
+            android:id="@+id/txtmingredientes"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:text="INGREDIENTES"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="144dp" />
+
+    </android.support.constraint.ConstraintLayout>
 
 
 </RelativeLayout>
