--- a/Lab1-UI/src/main/res/layout-land/activity_comida.xml
+++ b/Lab1-UI/src/main/res/layout-land/activity_comida.xml
@@ -8,7 +8,7 @@
 
 
     <ImageView
-        android:id="@+id/imgBebida2"
+        android:id="@+id/imgComida"
         android:layout_width="128dp"
         android:layout_height="73dp"
 
@@ -43,7 +43,7 @@
         android:text="@string/stxtHorario" />
 
     <TextView
-        android:id="@+id/txtTiempo"
+        android:id="@+id/txtTiempoc"
         android:layout_width="51dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -64,7 +64,7 @@
         android:layout_width="126dp"
         android:layout_height="40dp"
         android:layout_alignStart="@+id/cheMañana"
-        android:layout_below="@+id/imgBebida2">
+        android:layout_below="@+id/imgComida">
 
         <RadioButton
             android:id="@+id/rdbEntrada"
@@ -116,7 +116,7 @@
         android:layout_width="81dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/txtTiempo"
+        android:layout_below="@+id/txtTiempoc"
         android:ems="10"
         android:hint="@string/sPrecio"
         android:inputType="textPersonName" />
@@ -126,7 +126,7 @@
         android:layout_width="238dp"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/cheTarde"
-        android:layout_below="@+id/txtTiempo"
+        android:layout_below="@+id/txtTiempoc"
         android:ems="10"
         android:hint="@string/sIngredientes" />
 
@@ -134,7 +134,7 @@
         android:id="@+id/btHora"
         android:layout_width="62dp"
         android:layout_height="37dp"
-        android:layout_alignBaseline="@+id/txtTiempo"
+        android:layout_alignBaseline="@+id/txtTiempoc"
         android:layout_toEndOf="@+id/txtTimpoMensaje"
         android:text="@string/stxtHorario" />
 
@@ -219,7 +219,7 @@
             android:layout_toEndOf="@+id/txtmprecio" />
 
         <TextView
-            android:id="@+id/txtTiempo"
+            android:id="@+id/txtTiempoc"
             android:layout_width="89dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/txtmtipo"
